Fix redundant const qualifiers

The pointers in DefaultInputSource don’t correctly express that they are
const and not just point to const data.

https://bugzilla.gnome.org/show_bug.cgi?id=793195